2014-11-15  Davide G. M. Salvetti  <salve@linux.it>

        * style/ifluatex.el: New style.

        * doc/faq.texi: Update the `Why does 'TeX-next-error' ('C-c `')
        fail?' entry, taking into account the `TeX-file-line-error'
        option.  Update copyright range.

        * doc/auctex.texi (Selecting a Command): Fix typo.
        (Automatic Local): Update description of `TeX-style-path',
        `TeX-style-global', `TeX-style-local', and `TeX-auto-local'
        variables: there is no need to end directories and directories
        lists items with a slash.

        * doc/quickstart.texi (Editing Facilities): Fix documentation: to
        change font attributes of existing text, it has to be marked as an
        _active_ region.

2014-11-10  Davide G. M. Salvetti  <salve@linux.it>

        * context.el: Replace `read-string' with `TeX-read-string'.

        * latex.el: Replace `read-string' with `TeX-read-string'.

        * style/CJK.el: Replace `read-string' with `TeX-read-string'.

        * style/amsmath.el: Replace `read-string' with `TeX-read-string'.

        * style/amsthm.el: Replace `read-string' with `TeX-read-string'.

        * style/beamer.el: Replace `read-string' with `TeX-read-string'.

        * style/csquotes.el: Replace `read-string' with `TeX-read-string'.

        * style/dinbrief.el: Replace `read-string' with `TeX-read-string'.

        * style/dk-bib.el: Replace `read-string' with `TeX-read-string'.

        * style/emp.el: Replace `read-string' with `TeX-read-string'.

        * style/epsf.el: Replace `read-string' with `TeX-read-string'.

        * style/filecontents.el: Replace `read-string' with `TeX-read-string'.

        * style/foils.el: Replace `read-string' with `TeX-read-string';
        add copyright notice.

        * style/graphicx.el: Replace `read-string' with `TeX-read-string'.

        * style/inputenc.el: Replace `read-string' with `TeX-read-string'.
