@@ -1,5 +1,7 @@
 2014-11-15  Davide G. M. Salvetti  <salve@linux.it>
 
+        * style/luatextra.el: New style.
+
         * style/ifluatex.el: New style.
 
         * doc/faq.texi: Update the `Why does 'TeX-next-error' ('C-c `')
